# live-bootcamp-project

./: .gitignore  Cargo.toml  README.md  compose-local.yml  compose.yml  docker.sh  init-letsencrypt.sh  nginx-local.conf  nginx.conf
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/.sqlx/: query-74912de0e27d8fbd3efc506010a51e787d21bea8a6c5e4c08d564e475ff1ee56.json  query-8e247afa40bd92a7d68da2b23f7025f749e5be284d834ab922db421491986bdf.json  query-e8aee5b0edaa7293be3b8741788be8bfbbc75fc3c304feb4f122ae1c9e3e9bc9.json
auth-service/assets/: index.html
auth-service/src/: lib.rs  main.rs
auth-service/src/app_state/: app_state.rs
auth-service/src/domain/: data_stores.rs  email.rs  error.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: hashmap_user_store.rs  hashset_banned_token_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
