[workspace]
members = ["app-service", "auth-service"]
resolver = "2"

[workspace.dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.26", default-features = false, features = [
    "json",
    "cookies",
] }
async-trait = "0.1.78"
fake = "2.3.0"
rand = "0.8.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
validator = "0.16.1"
