[workspace]
members = ["app-service", "auth-service"]
resolver = "2"

[workspace.dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
askama = "0.12.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "cookies",
] }
async-trait = "0.1.78"
fake = "2.10.0"
rand = "0.8.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
validator = "0.16.1"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
