[workspace]
members = ["app-service", "auth-service"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7.9", features = ["macros"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
tokio = { version = "1.46.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
askama = "0.12.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
reqwest = { version = "0.11.27", default-features = false, features = [
    "json",
    "cookies",
] }
async-trait = "0.1.78"
fake = "2.10.0"
rand = "0.8.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
validator = "0.16.1"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-error = "0.2.0"
thiserror = "1.0.58"
color-eyre = "0.6.3"
