[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
thiserror = { workspace = true }
color-eyre = { workspace = true }
secrecy = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
rand = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
wiremock = { workspace = true }
